<resources>
    <string name="app_name">WhereIsRob</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WhereIsRob</string>
    <string name="nav_header_subtitle">ProSE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_test">Test</string>
    <string name="menu_historian">Historique</string>
    <string name="menu_manual">Pilotage</string>
    <string name="menu_help">Aide</string>
    <string name="menu_disconnection">Déconnexion</string>
    <string name="connectionFieldsErrorTitle">Veuillez modifier l\'adresse IP et/ou le port</string>
    <string name="connectionFieldsErrorMessage">L\'adresse IP ou le port ne respecte pas le protocole</string>
    <string name="delayExpiredTitle">Le délai de connexion est dépassé</string>
    <string name="delayExpiredMessage">Veuillez retenter de vous connecter</string>
    <string name="calibrateTitle">Positionner Rob sur le terrain</string>
    <string name="calibrateMessage">Notez le point sur lequel vous avez placé Rob. Ce point sera considéré comme l’origine du repère de positionnement. Appuyez sur « VALIDER » une fois Rob placé. Ce point sera considéré comme l\'origine du repère de positionnement.\n\nAppuyez sur « VALIDER » une fois Rob placé.</string>
    <string name="deconnectTitle">Déconnecter WhereIsRob de RobSoft</string>
    <string name="deconnectMessageYes">Êtes-vous sûr de vouloir déconnecter WhereIsRob de RobSoft ?</string>
    <string name="deconnectMessageNo">Êtes-vous sûr de vouloir annuler la connexion ?</string>
    <string name="stopTest">Le test est terminé</string>
    <string name="connectionLostTitle">WhereIsRob a perdu la connexion avec RobSoft</string>
    <string name="connectionLostMessage">Veuillez vous reconnecter</string>
    <string name="connecting">Connexion...</string>
    <string name="validate">VALIDER</string>
    <string name="cancel">ANNULER</string>
    <string name="testLayoutTitle">Test</string>
    <string name="pilotLayoutTitle">Pilotage manuel</string>
    <string name="historianLayoutTitle">Historique</string>
    <string name="helpTestTitle">Pour exécuter un test :</string>
    <string name="helpPilotTitle">Pour piloter Rob :</string>
    <string name="helpHistorianTitle">Depuis l\'historique :</string>
    <string name="helpConnectionTitle">Pour se connecter :</string>
    <string name="helpHistorianMessage">Depuis l’historique, vous pouvez voir l’ensemble des résultats des tests que vous avez précédemment exécuté. En swipant vers la droite, vous pouvez supprimer le test correspondant à la ligne swipée.</string>
    <string name="helpTestMessage">Sélectionnez un test dans l’onglet « Tests » ou bien sélectionnez un emplacement sur la grille puis cliquer sur « DÉMARRER ». Pour annuler le test en cours d’éxecution, appuyer sur « ANNULER ». Le test se termine quand Rob a atteind la position souhaitée ou quand vous appuyez sur « ARRÊTER ».</string>
    <string name="helpPilotMessage">Pour piloter manuellement Rob, appuyez sur « DÉMARRER ». Vous pouvez contrôler Rob en appuyant sur les touches directionnelles. Appuyez sur « ARRÊTER » quand vous avez terminé la session de pilotage.</string>
    <string name="helpConnectionMessage">Pour connecter WhereIsRob à Rob, veuillez saisir dans les champs IP et port l’IP et le port qui apparaissent sur l’écran de Rob puis appuyez sur « VALIDER ».</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ioException">IOException, connexion échouée !</string>
    <string name="manual">manuel</string>
    <string name="destination">Destination :</string>
    <string name="errorMeasuredPosition">Erreur, position mesurée nulle !</string>
    <string name="errorRecyclerAdaapter">Le résultat du test n\'a pas été sauvegardé !</string>
    <string name="errorWiFi">Not connected to Wi-Fi !</string>
    <string name="selectionTest">Scénario de test sélectionné : </string>
    <string name="endTest">Le test est terminé</string>
    <string name="errorPosition">error</string>
</resources>