<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_test"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/ic_menu_manual"
            android:title="@string/menu_manual" />

        <item
            android:id="@+id/nav_historian"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_historian" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_disconnection"
            android:icon="@drawable/ic_menu_disconnection"
            android:title="@string/menu_disconnection" />
    </group>

</menu>
